SFDC_LD_Packages/TerritoryMapping/main/default/objects/Territory_Mapping_Condition_Set__c/Territory_Mapping_Condition_Set__c.object-meta.xml
<CustomObject>
    <description>Set of conditions for Territory Mapping</description>
    <label>Territory Mapping Condition Set</label>
    <nameField>
        <label>Condition Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Mapping Condition Sets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>