SFDC_LD_Packages/TerritoryMapping/main/default/objects/Territory_Mapping_Condition_Set__c/fields/Evaluation_Order__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Order__c</fullName>
    <description>Order in which condition set should be evaluated in its mapping. Lower numbers evaluate first</description>
    <inlineHelpText>Order in which condition set should be evaluated in its mapping. Lower numbers evaluate first</inlineHelpText>
    <label>Evaluation Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>