SFDC_LD_Packages/TerritoryMapping/main/default/objects/Territory_Mapping_Condition_Set__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if Condition Set is active and currently enforced in Mapping</description>
    <inlineHelpText>Determines if Condition Set is active and currently enforced in Mapping</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>