SFDC_LD_Packages/TerritoryMapping/main/default/objects/Territory_Mapping_Condition_Set__c/fields/Target_Value__c.field-meta.xml
<CustomField>
    <fullName>Target_Value__c</fullName>
    <description>Value that should be populated in the Target Field if the condition set passes</description>
    <inlineHelpText>Value that should be populated in the Target Field if the condition set passes</inlineHelpText>
    <label>Target Value</label>
    <length>250</length>
    <type>Text</type>
</CustomField>