SFDC_LD_Packages/TerritoryMapping/main/default/objects/Territory_Mapping_Condition_Set__c/fields/Territory_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Territory_Mapping__c</fullName>
    <description>Mapping in which this condition set is evaluated</description>
    <inlineHelpText>Mapping in which this condition set is evaluated</inlineHelpText>
    <label>Territory Mapping</label>
    <referenceTo>Territory_Mapping__c</referenceTo>
    <relationshipLabel>Condition Sets</relationshipLabel>
    <relationshipName>Territory_Mapping_Condition_Sets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>